--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 
 <section class="navigation">
     <div class="nav-container">
-        <div class="brand">
-            <a>Image & Text</a>
-        </div>
+        <div class="brand"><font face="Courier" size=50>
+            <a>Voltworks</a>
+        </font></div>
         <nav>
             <div class="nav-mobile">
                 <a id="nav-toggle" href="#!"><span></span></a>
             </div>
             <ul>
-                <li><a href="#slide1">First Slide</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
+                <li><a href="#slide1">About</a></li>
+                <li><a href="slide2">Application</a></li>
+                <li><a href="slide3">Types</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -46,7 +46,7 @@
 
 <!---First slide-->
 
-<section class="fdb-block" id="slide1">
+<section class="main_block" id="slide1">
     <div class="container">
         <div class="row">
             Name
@@ -58,13 +58,13 @@
 </section>
 <!--Slides-->
 <section >
-    <div class="fdb-block"> <img src="1.jpg">Slide 1</div>
+    <div class="block1" id="slide2"> <img src="1.jpg">Slide 1</div>
 </section>
 <section >
-    <div class="fdb-block">Slide 2</div>
+    <div class="block2" id="slide3">Slide 2</div>
 </section>
 <section >
-    <div class="fdb-block">Slide 3</div>
+    <div class="block3" id="slide4">Slide 3</div>
 </section>
 
 <!--Contact US ------------->
@@ -74,7 +74,7 @@
 
 
 <!--Footer-->
-<footer class="fdb-block footer-small">
+<footer class="foot footer-small">
     <div class="container">
         <div class="row text-center align-items-center">
             <div class="col-12 col-sm-6 col-md-4 text-sm-left">
