--- a/Products.html
+++ b/Products.html
@@ -46,9 +46,15 @@
 
 <!---First slide-->
 <div>
-<section class="fdb-block" id="slide1">
+<section class="fdb-block2" id="slide1">
     <div class="container">
             <div class="flex-container">
+                <div class="flex-item" id="flex-iten-1">Box1</div>
+                <div class="flex-item" id="flex-iten-2">Box2</div>
+                <div class="flex-item" id="flex-iten-3">Box3</div>   
+                <div class="flex-item" id="flex-iten-1">Box1</div>
+                <div class="flex-item" id="flex-iten-2">Box2</div>
+                <div class="flex-item" id="flex-iten-3">Box3</div>
                 <div class="flex-item" id="flex-iten-1">Box1</div>
                 <div class="flex-item" id="flex-iten-2">Box2</div>
                 <div class="flex-item" id="flex-iten-3">Box3</div>
@@ -60,9 +66,7 @@
 <!--Slides-->
 
 
-<div>
-<!--Footer-->
-<footer class="fdb-block footer-small">
+<footer class="foot footer-small">
     <div class="container">
         <div class="row text-center align-items-center">
             <div class="col-12 col-sm-6 col-md-4 text-sm-left">
@@ -76,7 +80,7 @@
         </div>
     </div>
 </footer>
-</div>
+
 <script src="Scripts/main.js"></script>
 
 </body>
