--- a/Products.html
+++ b/Products.html
@@ -25,7 +25,7 @@
 <body>
 <!--Navigation Bar--------------------------------------->
 
-<!--<section class="navigation">
+<section class="navigation">
     <div class="nav-container">
         <div class="brand">
             <a>Image & Text</a>
@@ -35,14 +35,14 @@
                 <a id="nav-toggle" href="#!"><span></span></a>
             </div>
             <ul>
-                <li><a href="#slide1">First Slide</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
+                <li><a href="#slide1">Home</a></li>
+                <li><a href="#slide1">MOTORS</a></li>
+                <li><a href="#contact">INVERTERS</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </div>
-</section>-->
+</section>
 
 <!---First slide-->
 <div class="wrapper">
