--- a/Products.html
+++ b/Products.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i"
           rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="CSS/froala_blocks.css">
+    <link type="text/css" rel="stylesheet" href="CSS/main.css">
     <link type="text/css" rel="stylesheet" href="CSS/product.css">
 
     <link rel="stylesheet" type="text/css" href="ElasticStack/normalize.css"/>
@@ -28,16 +29,16 @@
 <section class="navigation">
     <div class="nav-container">
         <div class="brand">
-            <a>Image & Text</a>
+            <a>Voltworks</a>
         </div>
         <nav>
             <div class="nav-mobile">
                 <a id="nav-toggle" href="#!"><span></span></a>
             </div>
             <ul>
-                <li><a href="#slide1">Home</a></li>
-                <li><a href="#slide1">MOTORS</a></li>
-                <li><a href="#contact">INVERTERS</a></li>
+                <li><a href="#slide1">About</a></li>
+                <li><a href="slide2">Application</a></li>
+                <li><a href="slide3">Types</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -46,6 +47,7 @@
 
 <!---First slide-->
 <div class="wrapper">
+    <H1>MOTORS</H1>
     <H1>MOTORS</H1>
     <div class="container">
             <div class="flex-container">
@@ -108,7 +110,7 @@
 <!--Slides-->
 
 
-<!--<footer class="foot footer-small">
+<footer class="foot footer-small">
     <div class="container">
         <div class="row text-center align-items-center">
             <div class="col-12 col-sm-6 col-md-4 text-sm-left">
@@ -122,7 +124,7 @@
         </div>
     </div>
 </footer>
--->
+
 <script src="Scripts/main.js"></script>
 
 </body>
