--- a/Products.html
+++ b/Products.html
@@ -28,9 +28,9 @@
 
 <section class="navigation">
     <div class="nav-container">
-        <div class="brand">
+        <div class="brand"><font face="Courier" size=50>
             <a>Voltworks</a>
-        </div>
+        </font></div>
         <nav>
             <div class="nav-mobile">
                 <a id="nav-toggle" href="#!"><span></span></a>
