--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
           rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="CSS/froala_blocks.css">
     <link type="text/css" rel="stylesheet" href="CSS/main.css">
-    <link type="text/css" rel="stylesheet" href="CSS/product.css">
 
     <link rel="stylesheet" type="text/css" href="ElasticStack/normalize.css"/>
     <script src="ElasticStack/modernizr.custom.js"></script>
@@ -28,9 +27,9 @@
 
 <section class="navigation">
     <div class="nav-container">
-        <div class="brand">
-            <a >Voltworks</a>
-        </div>
+        <div class="brand"><font face="Courier" size=50>
+            <a>Voltworks</a>
+        </font></div>
         <nav>
             <div class="nav-mobile">
                 <a id="nav-toggle" href="#!"><span></span></a>
